--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
 
             <div class="skill">
                 <div class="skill-name">
-                    <img src="assets/ython.png" alt="Python" class="skill-icon">
+                    <img src="assets/Blender_logo_no_text.svg.png" alt="Python" class="skill-icon">
                     <span>blender</span>
                     <span>75%</span>
                 </div>
