Replace skill icon image for JavaScript

--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
 
             <div class="skill">
                 <div class="skill-name">
-                    <img src="assets/download (1)-Photoroom.png" alt="JavaScript" class="skill-icon">
+                    <img src="assets/color-replaced.png" alt="JavaScript" class="skill-icon">
                     <span>unity</span>
                     <span>45%</span>
                 </div>
